--- a/weekOne/PongInClass/index.html
+++ b/weekOne/PongInClass/index.html
@@ -8,7 +8,9 @@
     
 </head>
 <body>
+    <!-- the canvas is just like flasx, it changes the page like games -->
     <canvas width="800" height="800"></canvas>
+    <!-- linking the java pages -->
     <script src="gameObject.js"></script>
     <script src="game.js"></script>
 
