--- a/weekOne/pong/index.html
+++ b/weekOne/pong/index.html
@@ -9,8 +9,11 @@
 </head>
 <body>
     <canvas id="pong" width="800" height="800"></canvas>
+    <!-- this is the "gameObject" -->
     <script src="js/Box.js"></script>
+
     <script src="js/keyboard.js"></script>
+    
     <script src="js/pong.js"></script>
 </body>
 </html>
