--- a/weekOne/pong/index.html
+++ b/weekOne/pong/index.html
@@ -10,6 +10,10 @@
 <body>
     <canvas id="pong" width="800" height="800"></canvas>
     <!-- this is the "gameObject" -->
+
+
+    <script src="js/Player.js"></script>
+    
     <script src="js/Box.js"></script>
 
     <script src="js/keyboard.js"></script>
