--- a/weekOne/pong/index.html
+++ b/weekOne/pong/index.html
@@ -8,6 +8,8 @@
     <link rel="stylesheet" href="pong.css">
 </head>
 <body>
+    <section id="score"><div></div>|<div></div></section>
+    
     <canvas id="pong" width="800" height="800"></canvas>
     <!-- this is the "gameObject" -->
 
