--- a/WeekThree/classtwo.html
+++ b/WeekThree/classtwo.html
@@ -128,6 +128,21 @@
         //button vs submition
         //check box
         //raido button
+
+
+        
+
+        function add(obj){
+            he = {a:10,b:10}
+
+            for(i in obj){
+                he[i] = obj[i]
+            }
+
+            return he.a + he.b;
+        }
+        //like this the order does not mater
+        alert(add({b:5}))
     </script>
 
 
