--- a/Index.html
+++ b/Index.html
@@ -11,6 +11,9 @@
     <h1>Pong</h1>
 
     <a href="WeekOne/pong/index.html">The Basic Pong Game</a>
+    <a href="WeekThree/Pong/se251pong_w3_start_files/index.html">more Advanced Pong</a>
+
+    WeekThree\Pong\se251pong_w3_start_files\index.html
     
 </body>
 </html>
