--- a/WeekThree/Pong/se251pong_w3_start_files/index.html
+++ b/WeekThree/Pong/se251pong_w3_start_files/index.html
@@ -41,7 +41,13 @@
                     <label>DOWN</label><input class="d" type="text" maxlength="1"><div class="output"></div>
                     <label>STRAIGHT</label><input class="s" type="text" maxlength="1"><div class="output"></div>
                 </div>
+                <div>
+                    <h2>AI Player</h2>
+                    <label>AI</label><input class="ai" type="button"><div class="output"></div>
+                </div>
             </div>
+            
+
         </section>
     </main>
     <script src="js/User.js"></script>
