--- a/WeekThree/Pong/se251pong_w3_start_files/index.html
+++ b/WeekThree/Pong/se251pong_w3_start_files/index.html
@@ -43,7 +43,7 @@
                 </div>
                 <div>
                     <h2>AI Player</h2>
-                    <label>AI</label><input class="ai" type="button"><div class="output"></div>
+                    <label>AI</label><input class="airadio" type="button"><div class="output"></div>
                 </div>
             </div>
             
