--- a/WeekFour/menus/index.html
+++ b/WeekFour/menus/index.html
@@ -100,12 +100,12 @@
         //This is the whole secctions for both new buttons
         newButton.addEventListener('click',(e)=>{
             $(`#start-options`).animate({opacity: 0}, 1000, function(){
-                window.location = `lobby.html?$load=${e.target.dataset.load}`
+                window.location = `lobby.html?load=${e.target.dataset.load}`
             });
         })
         contButton.addEventListener('click',(e)=>{
             $(`#start-options`).animate({opacity: 0}, 1000, function(){
-                window.location = `lobby.html?$load=${e.target.dataset.load}`
+                window.location = `lobby.html?load=${e.target.dataset.load}`
             });
         })
 
