--- a/WeekFour/menus/lobby.html
+++ b/WeekFour/menus/lobby.html
@@ -38,6 +38,16 @@
     <script src="js/User.js"></script>
     <script>
 
+        let params = new URL(document.location).searchParams;
+        console.log(params)
+        let name = params.get('load');
+
+
+        alert(name);
+
+
+
+
     </script>
 </body>
 </html>
