--- a/Index.html
+++ b/Index.html
@@ -86,6 +86,11 @@
 
                 //this is the start of the slide show section
 
+
+                // const Pages = [[test = window.location = `Test.html`], window.location = `Test2.html` ]
+
+                // console.log(Pages)
+
                 const SlideShowDisplay = document.createElement(`div`)
                 SlideShowDisplay.setAttribute(`id`, `slideShowDisplay`)
                 
